@@ -1,17 +1,17 @@
 package br.com.livelo.orderflight.service.reservation;
 
-import br.com.livelo.orderflight.domain.dto.reservation.response.*;
 import br.com.livelo.orderflight.domain.dto.reservation.request.ReservationItem;
 import br.com.livelo.orderflight.domain.dto.reservation.request.ReservationRequest;
-import br.com.livelo.orderflight.domain.entity.OrderEntity;
-import br.com.livelo.orderflight.domain.entity.OrderItemEntity;
-import br.com.livelo.orderflight.domain.entity.SegmentEntity;
+import br.com.livelo.orderflight.domain.dto.reservation.response.*;
+import br.com.livelo.orderflight.domain.dtos.pricing.response.*;
+import br.com.livelo.orderflight.domain.entity.*;
 import br.com.livelo.orderflight.exception.OrderFlightException;
 import br.com.livelo.orderflight.exception.enuns.OrderFlightErrorType;
+import br.com.livelo.orderflight.mappers.ReservationMapper;
 import br.com.livelo.orderflight.proxies.ConnectorPartnersProxy;
+import br.com.livelo.orderflight.proxies.PricingProxy;
 import br.com.livelo.orderflight.service.order.impl.OrderServiceImpl;
 import br.com.livelo.orderflight.service.reservation.impl.ReservationServiceImpl;
-import br.com.livelo.orderflight.mappers.ReservationMapper;
 import jakarta.persistence.PersistenceException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -20,14 +20,16 @@ import org.mapstruct.factory.Mappers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.math.BigDecimal;
+import java.util.*;
+import java.util.stream.Collectors;
 
+import static br.com.livelo.orderflight.exception.enuns.OrderFlightErrorType.ORDER_FLIGHT_ORDER_STATUS_INVALID_BUSINESS_ERROR;
+import static br.com.livelo.orderflight.exception.enuns.OrderFlightErrorType.ORDER_FLIGHT_PARTNER_RESERVATION_EXPIRED_BUSINESS_ERROR;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ReservationServiceTest {
@@ -36,84 +38,228 @@ class ReservationServiceTest {
     private OrderServiceImpl orderService;
     @Mock
     private ConnectorPartnersProxy connectorPartnersProxy;
+    @Mock
+    private PricingProxy pricingProxy;
 
     @BeforeEach
     void setup() {
         var reservationMapper = Mappers.getMapper(ReservationMapper.class);
-        this.reservationService = new ReservationServiceImpl(orderService, connectorPartnersProxy, reservationMapper);
+        this.reservationService = new ReservationServiceImpl(orderService, connectorPartnersProxy, pricingProxy, reservationMapper);
     }
 
     @Test
     void shouldCreateReservation() {
-        var partnerReservationResponse = PartnerReservationResponse.builder()
-                .items(
-                        List.of(
-                                PartnerReservationItem
-                                        .builder()
-                                        .segments(List.of(PartnerReservationSegment.builder().build()))
-                                        .build()
-                        )
-                )
-                .build();
+        var transactionId = "123";
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", "ci123");
         var orderMock = mock(OrderEntity.class);
         var requestMock = mock(ReservationRequest.class);
-        when(orderService.findByCommerceOrderId(requestMock.getCommerceOrderId())).thenReturn(Optional.empty());
+        var ids = requestMock.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(requestMock.getCommerceOrderId());
+        when(requestMock.getCommerceOrderId()).thenReturn("QWERT");
+        when(orderService.findByCommerceOrderIdIn(any())).thenReturn(Optional.empty());
+
         when(connectorPartnersProxy.createReserve(any(), anyString())).thenReturn(partnerReservationResponse);
         when(orderService.save(any())).thenReturn(orderMock);
-
-        var transactionId = "123";
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
 
         var response = reservationService.createOrder(requestMock, transactionId, "123", "WEB", "price");
-        assertAll(
-                () -> assertNotNull(response),
-                () -> assertEquals(transactionId, response.transactionId())
-              );
+
+        assertNotNull(response);
     }
 
     @Test
-    void shouldCreateOrder_WhenOrderItemsQuantityEqualsAndTokensEquals() {
+    void shouldCreateOrder_WhenReservationExistsInPartner() {
         var transactionId = "123";
         var id = 1L;
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdf";
         var orderMock = mock(OrderEntity.class);
 
-        var partnerReservationResponse = PartnerReservationResponse.builder()
-                .items(List.of(PartnerReservationItem
-                        .builder()
-                        .type("teste")
-                                .segments(List.of(PartnerReservationSegment
-                                        .builder()
-                                                .luggages(List.of(PartnerReservationLuggage
-                                                        .builder()
-                                                        .build()))
-                                                .cancelationRules(List.of(PartnerReservationCancelationRule
-                                                        .builder()
-                                                        .build()))
-                                                .changeRules(List.of(PartnerReservationChangeRule
-                                                        .builder()
-                                                        .build()))
-                                                .flightsLegs(List.of(PartnerReservationFlightsLeg
-                                                        .builder()
-                                                        .build()))
-                                        .build()))
-                        .build()))
-                .build();
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
 
-        when(connectorPartnersProxy.createReserve(any(), anyString())).thenReturn(partnerReservationResponse);
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any())).thenReturn(connectorReservationResponse);
         when(orderService.save(any())).thenReturn(orderMock);
 
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId));
 
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId)));
-
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenReturn(Optional.of(order));
-
-        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price");
-        assertAll(
-                () -> assertNotNull(response),
-                () -> assertEquals(transactionId, response.transactionId())
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
         );
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price");
+        assertNotNull(response);
+    }
+
+    @Test
+    void shouldCreateOrder_WhenReservationExistsInPartnerAndItemIsFlight() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var orderMock = mock(OrderEntity.class);
+
+        when(orderService.isFlightItem(any())).thenReturn(true);
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any())).thenReturn(connectorReservationResponse);
+        when(orderService.save(any())).thenReturn(orderMock);
+
+
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
+        );
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price");
+        assertNotNull(response);
+    }
+
+    @Test
+    void shouldCreateOrder_WhenReservationExistsInPartnerAndPriceModalitiesIsNull() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var orderMock = mock(OrderEntity.class);
+
+        when(orderService.isFlightItem(any())).thenReturn(true);
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any())).thenReturn(connectorReservationResponse);
+        when(orderService.save(any())).thenReturn(orderMock);
+
+
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
+        );
+
+        order.getItems().forEach(item -> item.getPrice().setPricesModalities(null));
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price");
+        assertNotNull(response);
+    }
+
+    @Test
+    void shouldntCreateOrder_WhenReservationExpiredInPartner() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-9001", segmentsPartnersId);
+
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any())).thenReturn(connectorReservationResponse);
+
+
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGH"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
+        );
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(orderService.save(any())).thenReturn(order);
+        var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, transactionId, "123", "WEB", "price"));
+        assertAll(
+                () -> assertEquals(ORDER_FLIGHT_PARTNER_RESERVATION_EXPIRED_BUSINESS_ERROR, exception.getOrderFlightErrorType()),
+                () -> verify(orderService, times(1)).save(any())
+        );
+    }
+
+    @Test
+    void shouldntCreateOrder_WhenOrderExistsInDB_AndStatusIsNotInitial() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+
+
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-9001"
+        );
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+
+        var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, transactionId, "123", "WEB", "price"));
+        assertEquals(ORDER_FLIGHT_ORDER_STATUS_INVALID_BUSINESS_ERROR, exception.getOrderFlightErrorType());
     }
 
     @Test
@@ -121,35 +267,22 @@ class ReservationServiceTest {
         var transactionId = "1234";
         var id = 1L;
         var commerceItemId = "123";
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdf";
 
-        var partnerReservationResponse = PartnerReservationResponse.builder()
-                .items(List.of(PartnerReservationItem
-                        .builder()
-                        .type("teste")
-                        .segments(List.of(PartnerReservationSegment
-                                .builder()
-                                .luggages(List.of(PartnerReservationLuggage
-                                        .builder()
-                                        .build()))
-                                .cancelationRules(List.of(PartnerReservationCancelationRule
-                                        .builder()
-                                        .build()))
-                                .changeRules(List.of(PartnerReservationChangeRule
-                                        .builder()
-                                        .build()))
-                                .flightsLegs(List.of(PartnerReservationFlightsLeg
-                                        .builder()
-                                        .build()))
-                                .build()))
-                        .build()))
-                .build();
-        
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
         when(connectorPartnersProxy.createReserve(any(), anyString())).thenReturn(partnerReservationResponse);
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId));
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, commerceItemId, segmentsPartnersId)));
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenReturn(Optional.of(order));
+        var request = this.buildResevationRequest(Collections.singletonList(this.buildReservationItem(segmentsPartnersId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, commerceItemId, segmentsPartnersId, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(orderService.save(any())).thenReturn(order);
         var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price");
         assertAll(
                 () -> assertNotNull(response),
@@ -158,38 +291,62 @@ class ReservationServiceTest {
     }
 
     @Test
-    void shouldntCreateOrder_WhenOrderItemsQuantityDiverge() {
+    void shouldCreateNewOrder_WhenOrderItemsQuantityDiverge() {
         var transactionId = "123";
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdf";
 
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId));
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+        when(connectorPartnersProxy.createReserve(any(), anyString())).thenReturn(partnerReservationResponse);
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var request = this.buildResevationRequest(Collections.singletonList(this.buildReservationItem(segmentsPartnersId, type, "CVCFLIGHT")), List.of(segmentsPartnersId, segmentsPartnersId));
 
         var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
                 Set.of(
-                        this.buildOrderItem(1L, transactionId, segmentsPartnersId),
-                        this.buildOrderItem(2L, transactionId, segmentsPartnersId)
-                )
+                        this.buildOrderItem(1L, transactionId, segmentsPartnersId, "CVCFLIGHT"),
+                        this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")
+                ),
+                transactionId,
+                "LIVPNR-1006"
         );
 
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenReturn(Optional.of(order));
-        var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price"));
-        assertEquals(OrderFlightErrorType.ORDER_FLIGHT_DIVERGENT_QUANTITY_ITEMS_BUSINESS_ERROR, exception.getOrderFlightErrorType());
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(orderService.save(any())).thenReturn(order);
+        var response = this.reservationService.createOrder(request, "123", "123", "WEB", "price");
+
+        assertAll(
+                () -> assertNotNull(response),
+                () -> assertEquals(transactionId, response.transactionId()),
+                () -> verify(orderService, times(1)).delete(any())
+        );
     }
 
     @Test
     void shouldntCreateOrder_WhenTokensDifferent() {
         var transactionId = "123";
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdfg";
         var token = "asdf";
         var id = 1L;
 
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId));
+        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
 
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, transactionId, token)));
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, transactionId, token, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
 
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenReturn(Optional.of(order));
+       var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+       ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price"));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_DIVERGENT_TOKEN_BUSINESS_ERROR, exception.getOrderFlightErrorType());
     }
@@ -197,16 +354,22 @@ class ReservationServiceTest {
     @Test
     void shouldntCreateOrder_WhenQuantityTokensDifferent() {
         var transactionId = "123";
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdfg";
         var token = "asdf";
         var id = 1L;
 
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId, segmentsPartnersId));
+        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId, segmentsPartnersId));
 
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, transactionId, token)));
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, transactionId, token, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
 
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenReturn(Optional.of(order));
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price"));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_DIVERGENT_TOKEN_BUSINESS_ERROR, exception.getOrderFlightErrorType());
     }
@@ -214,38 +377,170 @@ class ReservationServiceTest {
     @Test
     void shouldntCreateOrder_WhenUnknownException() {
         var transactionId = "123";
-        var type = "teste";
+        var type = "type_flight";
         var segmentsPartnersId = "asdfg";
 
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type)), List.of(segmentsPartnersId, segmentsPartnersId));
+        var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
 
-        when(orderService.findByCommerceOrderId(request.getCommerceOrderId())).thenThrow(PersistenceException.class);
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenThrow(PersistenceException.class);
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price"));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_INTERNAL_ERROR, exception.getOrderFlightErrorType());
     }
 
     private ReservationRequest buildResevationRequest(List<ReservationItem> reservationItems, List<String> segmentsPartnersId) {
         return ReservationRequest.builder()
+                .commerceOrderId("QWERT")
                 .items(reservationItems)
                 .segmentsPartnerIds(segmentsPartnersId)
                 .build();
     }
 
-    private OrderEntity buildOrderEntity(Set<OrderItemEntity> orderItems) {
+    private OrderEntity buildOrderEntity(String commerceOrderId, Set<OrderItemEntity> orderItems, String transactionId, String statusCode) {
         return OrderEntity.builder()
+                .commerceOrderId(commerceOrderId)
+                .partnerCode("CVC")
+                .transactionId(transactionId)
+                .currentStatus(OrderStatusEntity.builder().code(statusCode).build())
+                .price(OrderPriceEntity.builder().partnerAmount(BigDecimal.TEN).ordersPriceDescription(Set.of(OrderPriceDescriptionEntity.builder().build())).build())
                 .items(orderItems)
+                .statusHistory(new HashSet<>())
                 .build();
     }
 
-    private OrderItemEntity buildOrderItem(Long id, String commerceItemId, String token) {
+    private OrderItemEntity buildOrderItem(Long id, String commerceItemId, String token, String skuId) {
         return OrderItemEntity.builder()
                 .id(id)
+                .skuId(skuId)
+                .productId("flight")
+                .travelInfo(TravelInfoEntity.builder()
+                        .adultQuantity(1)
+                        .childQuantity(0)
+                        .babyQuantity(0)
+                        .type("test")
+                        .build())
                 .commerceItemId(commerceItemId)
-                .segments(Set.of(SegmentEntity.builder().partnerId(token).build()))
+                .segments(Set.of(SegmentEntity.builder()
+                        .step("1")
+                        .stops(1)
+                        .flightDuration(30)
+                        .flightsLegs(Set.of(FlightLegEntity.builder()
+                                .airlineManagedByIata("")
+                                .airlineManagedByDescription("")
+                                .airlineOperatedByIata("")
+                                .airlineOperatedByDescription("")
+                                .build()))
+                        .luggages(Set.of(LuggageEntity.builder().build()))
+                        .cancelationRules(Set.of(CancelationRuleEntity.builder().build()))
+                        .changeRules(Set.of(ChangeRuleEntity.builder().build()))
+                        .partnerId(token)
+                        .build()))
+                .price(OrderItemPriceEntity.builder().pricesModalities(Set.of(PriceModalityEntity.builder().priceListId("price").build())).partnerAmount(BigDecimal.TEN).build())
                 .build();
     }
 
-    private ReservationItem buildReservationItem(String commerceItemId, String type) {
-        return ReservationItem.builder().commerceItemId(commerceItemId).productType(type).build();
+    private ReservationItem buildReservationItem(String commerceItemId, String type, String skuId) {
+        return ReservationItem.builder().skuId(skuId).commerceItemId(commerceItemId).productType(type).build();
+    }
+
+    private List<PricingCalculateResponse> buildPricingCalculateResponse() {
+        return List.of(
+                PricingCalculateResponse.builder()
+                        .id("QWERT")
+                        .prices(
+                                List.of(
+                                        PricingCalculatePrice.builder()
+                                                .pointsAmount(BigDecimal.TEN)
+                                                .accrualPoints(BigDecimal.TEN)
+                                                .priceListId("price")
+                                                .flight(PricingCalculateFlight.builder().amount(BigDecimal.TEN).pointsAmount(BigDecimal.TEN).passengerType("ADULT").build())
+                                                .taxes(PricingCalculateTaxes.builder().amount(BigDecimal.TEN).pointsAmount(BigDecimal.TEN).build())
+                                                .pricesDescription(
+                                                        PricingCalculatePricesDescription.builder()
+                                                                .flights(List.of(
+                                                                        PricingCalculateFlight.builder()
+                                                                                .passengerType("BY_ADULT")
+                                                                                .pointsAmount(BigDecimal.TEN)
+                                                                                .build()
+                                                                ))
+                                                                .taxes(
+                                                                        List.of(
+                                                                                PricingCalculateTaxes.builder()
+                                                                                        .type("TESTE_TAX")
+                                                                                        .amount(BigDecimal.TEN)
+                                                                                        .pointsAmount(BigDecimal.TEN)
+                                                                                        .build()
+                                                                        )
+                                                                )
+                                                                .build()
+                                                ).taxes(PricingCalculateTaxes.builder().amount(BigDecimal.TEN).pointsAmount(BigDecimal.TEN).build())
+                                                .flight(PricingCalculateFlight.builder().amount(BigDecimal.TEN).pointsAmount(BigDecimal.TEN).build())
+                                                .build()
+                                )
+                        ).build());
+    }
+
+    private PartnerReservationResponse buildPartnerReservationResponse(String status, String commerceItemId) {
+        return PartnerReservationResponse.builder()
+                .commerceOrderId("QWERT")
+                .partnerCode("CVC")
+                .status(PartnerResponseStatus.builder().code(status).build())
+                .ordersPriceDescription(
+                        PartnerReservationOrdersPriceDescription.builder()
+                                .flights(List.of(
+                                                PartnerReservationOrdersPriceDescriptionFlight.builder()
+                                                        .amount(new BigDecimal(10))
+                                                        .passengerType("BY_ADULT")
+                                                        .build()
+                                        )
+                                )
+                                .taxes(
+                                        List.of(PartnerReservationOrdersPriceDescriptionTaxes.builder()
+                                                .amount(new BigDecimal(10))
+                                                .type("TESTE_TAX")
+                                                .build()
+                                        )
+                                )
+                                .build()
+                ).items(
+                        List.of(
+                                PartnerReservationItem
+                                        .builder()
+                                        .type("type_flight")
+                                        .commerceItemId(commerceItemId)
+                                        .travelInfo(PartnerReservationTravelInfo.builder().build())
+                                        .segments(List.of(PartnerReservationSegment.builder()
+                                                .step("1")
+                                                .stops(1)
+                                                .flightDuration(55)
+                                                .luggages(List.of(PartnerReservationLuggage.builder().build()))
+                                                .cancelationRules(List.of(PartnerReservationCancelationRule
+                                                        .builder()
+                                                        .build()))
+                                                .changeRules(List.of(PartnerReservationChangeRule
+                                                        .builder()
+                                                        .build()))
+                                                .flightLegs(List.of(PartnerReservationFlightsLeg
+                                                        .builder()
+                                                        .airline(PartnerReservationFlightLegAirline.builder()
+                                                                .operatedBy(PartnerReservationAirline.builder().build())
+                                                                .managedBy(PartnerReservationAirline.builder().build())
+                                                                .build())
+                                                        .build()))
+                                                .build()))
+                                        .build(),
+                                PartnerReservationItem
+                                        .builder()
+                                        .type("type_flight_tax")
+                                        .commerceItemId(commerceItemId)
+                                        .build()
+                        )
+                )
+                .build();
     }
 }
